fix for text alignment

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -36,6 +36,7 @@ body {
 }
 
 .textBox p {
+  text-align:center;
   padding-top: 20px;
   padding-right: 20px;
   padding-left: 20px;
